<resources>
    <string name="app_name">OTA_Project</string>

    <!-- contentDescription -->
    <string name="description_image_button_state">OTA STATE IMAGE BUTTON</string>
    <string name="description_image_view_logo">OTA_PROJECT_LOGO</string>

    <!-- Button Text -->
    <string name="button_file_state">FILE</string>
    <string name="button_filter">FILTER</string>
    <string name="button_reset">Reset List</string>
    <string name="button_scan_start">Start Scanning</string>
    <string name="button_scan_stop">Stop Scanning</string>
    <string name="button_file_refresh">REFRESH</string>
    <string name="button_file_cancel">X</string>
    <string name="button_update_list_gone">▲</string>
    <string name="button_update_list_wide">▼</string>

    <!-- TextView Sample Text -->
    <string name="item_address">Mac Address</string>
    <string name="item_device_name">Device Name</string>
    <string name="item_connectable">NonConnectable / Connectable</string>
    <string name="file_recent">Recent : 00/00/00 PM 00:00</string>
    <string name="file_application_title">Application</string>
    <string name="file_app_loader_title">AppLoader</string>
    <string name="file_no_file">No File</string>

    <!-- dialog_quest_reset -->
    <string name="reset_dialog_title">리스트 초기화</string>
    <string name="reset_dialog_sub_title">초기화 하고 싶은 리스트를 선택해주세요</string>
    <string name="check_scan">스캔 리스트</string>
    <string name="check_update">업데이트 리스트</string>
    <string name="check_black">블랙 리스트</string>


    <!-- Device State Text -->
    <string name="item_state_updatable">업데이트 가능</string>
    <string name="item_state_non_updatable">업데이트 불가능</string>
    <string name="item_state_checking">상태 체크 중</string>
    <string name="item_state_updating">업데이트 중</string>
    <string name="item_state_waiting">대기 중</string>
    <string name="item_state_no_files">파일 필요</string>
    <string name="item_state_no_implement">구현 중</string>

    <!-- Permission Check Rationale -->
    <string name="permission_default_rationale">어플의 원활한 사용을 위해 권한 승인이 필요합니다!</string>
    <string name="permission_location_rationale">블루투스 기능의 원활한 사용을 위해 위치 권한이 필요합니다!</string>

    <!-- Toast Message -->
    <string name="toast_is_not_support_ble">해당 기기는 BLE 기능을 지원하지 않아 어플 사용이 불가능합니다.</string>
    <string name="toast_permission_denied">권한 승인이 거부되어 어플이 종료됩니다.</string>
    <string name="toast_scan_start">스캔이 시작됩니다.</string>
    <string name="toast_scan_stop">스캔이 종료됩니다.</string>
    <string name="toast_scanning">스캔 중입니다.</string>
    <string name="toast_scanning_retry">스캔 중입니다! 스캔을 중단하고 다시 시도해주세요!</string>
    <string name="toast_reset_list">리스트가 초기화되었습니다.</string>
    <string name="toast_reset_all_unchecked">선택 된 리스트가 없습니다!</string>

    <!-- Device Default Text -->
    <string name="device_default_name">No Name</string>

</resources>