<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:id="@+id/container_recentTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp">

        <TextView
            android:id="@+id/textview_recent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_recent"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_directory_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp">

        <Spinner
            android:id="@+id/directory_list"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/spinner_background"
            android:gravity="center" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_file_path"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center|start"
                android:text="@string/file_application_title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/icon_application"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/edit_application"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/file_no_file"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center|start"
                android:text="@string/file_app_loader_title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_application" />

            <ImageView
                android:id="@+id/icon_app_loader"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="5dp"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/edit_application"
                tools:srcCompat="@tools:sample/avatars" />


            <EditText
                android:id="@+id/edit_app_loader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:text="@string/file_no_file"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/container_refresh"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            >

            <Button
                android:id="@+id/button_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_file_refresh"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/button_file_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_file_cancel"
            />

    </LinearLayout>

</LinearLayout>